New website look + feel, also made first login classes
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@58 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/src/main/webapps/metabolights/resources/messages_en.properties
+++ b/src/main/webapps/metabolights/resources/messages_en.properties
@@ -8,3 +8,8 @@ label.menu=Menu
 label.title=Contact Manager
  
 label.footer=&copy; EMBL EBI
+
+NotEmpty.loginForm.userName=must  not  be  blank.
+Size.loginForm.userName=size must between 1 to 50 characters.
+NotEmpty.loginForm.password=must not be blank.
+Size.loginForm.password=size must between 1 to 20 characters.
