User login added. Removed Contact demo application objects.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@67 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/src/main/webapps/metabolights/resources/messages_en.properties
+++ b/src/main/webapps/metabolights/resources/messages_en.properties
@@ -1,15 +1,13 @@
-label.firstname=First Name
-label.lastname=Last Name
-label.email=Email
-label.telephone=Telephone
-label.addcontact=Add Contact
- 
-label.menu=Menu
-label.title=Contact Manager
- 
 label.footer=&copy; EMBL EBI
+label.username=Username
+label.password=Password
+label.rememberme=Remember me
+label.login=Login
+label.submit=Submit
 
-NotEmpty.loginForm.userName=must  not  be  blank.
-Size.loginForm.userName=size must between 1 to 50 characters.
-NotEmpty.loginForm.password=must not be blank.
-Size.loginForm.password=size must between 1 to 20 characters.
+msg.invalidSessionHeader=Invalid session
+msg.invalidSessionMsg=Your session appears to have timed out.
+msg.loggedOutHeader=Logged Out
+msg.loggedOutMsg=You have been logged out. 
+
+
