--- a/src/main/webapps/metabolights/resources/messages_nl.properties
+++ b/src/main/webapps/metabolights/resources/messages_nl.properties
@@ -1,10 +1,13 @@
-label.firstname=Voornaam
-label.lastname=Achernaam
-label.email=Email
-label.telephone=Telefoon
-label.addcontact=Contact toevoegen
- 
-label.title=Contact Manager
-label.menu=Kinder Menu
- 
-label.footer=&copy; EMBL-EBI
+label.footer=&copy; EMBL EBI
+label.username=Gebruiker
+label.password=Wachtwoord
+label.rememberme=Onthoud mij
+label.login=Inloggen
+label.submit=Voer uit
+
+msg.invalidSessionHeader=Ongeldige sessie
+msg.invalidSessionMsg=Uw sessie is niet langer geldig.
+msg.loggedOutHeader=Uitgelogd
+msg.loggedOutMsg=U bent uitgelogd 
+
+
