Search functionality sort of
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@68 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/src/main/webapps/metabolights/resources/messages_en.properties
+++ b/src/main/webapps/metabolights/resources/messages_en.properties
@@ -4,10 +4,17 @@ label.password=Password
 label.rememberme=Remember me
 label.login=Login
 label.submit=Submit
+label.search=search
 
 msg.invalidSessionHeader=Invalid session
 msg.invalidSessionMsg=Your session appears to have timed out.
 msg.loggedOutHeader=Logged Out
 msg.loggedOutMsg=You have been logged out. 
+msg.reqFieldMissing=Required field(s) are missing.
+msg.incorrUserPw=Incorrect user name and/or password.
+msg.loggedIn=You have successfully logged in.
+msg.loggedOut=You have successfully logged out.
+msg.credentials=Please provide username and password to be able to submit data to Metabolights.
 
-
+url.bii.prefix.search=http://172.22.69.119:8080/bioinvindex/browse_studies.seam
+url.bii.prefix.study=http://172.22.69.119:8080/bioinvindex/study.seam
