File uploading added to website
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@77 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/src/main/webapps/metabolights/resources/messages_en.properties
+++ b/src/main/webapps/metabolights/resources/messages_en.properties
@@ -5,6 +5,9 @@ label.rememberme=Remember me
 label.login=Login
 label.submit=Submit
 label.search=search
+label.file=File
+label.filename=File name
+label.upload=Upload
 
 msg.invalidSessionHeader=Invalid session
 msg.invalidSessionMsg=Your session appears to have timed out.
@@ -15,6 +18,11 @@ msg.incorrUserPw=Incorrect user name and/or password.
 msg.loggedIn=You have successfully logged in.
 msg.loggedOut=You have successfully logged out.
 msg.credentials=Please provide username and password to be able to submit data to Metabolights.
+msg.error.general=Oops, there was an error. The error has been logged and will be looked into.<br>We apologize for any incovenience.
+msg.upload=Please choose your IsaTab output file (zipped) for upload to the Metabolights server.
+msg.upload.ok=Your file was uploaded successfully!
+msg.upload.notValid=Please provide a valid file name..
+
 
 url.bii.prefix.search=http://172.22.69.119:8080/bioinvindex/browse_studies.seam
 url.bii.prefix.study=http://172.22.69.119:8080/bioinvindex/study.seam
