--- a/src/main/webapps/metabolights/resources/messages_en.properties
+++ b/src/main/webapps/metabolights/resources/messages_en.properties
@@ -9,6 +9,7 @@ label.file=File
 label.filename=File name
 label.upload=Upload
 
+msg.backToMainPage=Back to the main page.
 msg.invalidSessionHeader=Invalid session
 msg.invalidSessionMsg=Your session appears to have timed out.
 msg.loggedOutHeader=Logged Out
@@ -20,7 +21,10 @@ msg.loggedOut=You have successfully logged out.
 msg.credentials=Please provide username and password to be able to submit data to Metabolights.
 msg.error.general=Oops, there was an error. The error has been logged and will be looked into.<br>We apologize for any incovenience.
 msg.upload=Please choose your IsaTab output file (zipped) for upload to the Metabolights server.
-msg.upload.ok=Your file was uploaded successfully!
 msg.upload.notValid=Please provide a valid file name..
+msg.uploaded.ok=Your file was uploaded successfully
+msg.uploaded.nowWhat1=What happens next?
+msg.uploaded.nowWhat2=We are processing your submission.<br>We will process your file and upload it into our database. For the time being this done manually, but we will automate this process soon.<br> 
+msg.uploaded.nowWhat3=We will send you a confirmation by e-mail once the file has been processed successfully. You will then also receive a Metabolights identifier and URL with which you can refer to your IsaTab experiment.   
 
 
