Changing label for experiment status
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@237 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapps/metabolights/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapps/metabolights/resources/messages_en.properties
@@ -8,7 +8,7 @@ label.search=search
 label.file=File
 label.filename=File name
 label.upload=Upload
-label.experimentstatus=Make it public
+label.experimentstatuspublic=Make it public
 
 msg.backToMainPage=Back to the main page.
 msg.invalidSessionHeader=Invalid session
