Mostly changes for user login aspects (user creation, pw reminder etc)
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@253 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapps/metabolights/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapps/metabolights/resources/messages_en.properties
@@ -1,6 +1,7 @@
 label.footer=&copy; EMBL EBI
 label.username=Username
 label.password=Password
+label.passwordRep=Password (repeated)
 label.rememberme=Remember me
 label.login=Login
 label.submit=Submit
@@ -9,6 +10,16 @@ label.file=File
 label.filename=File name
 label.upload=Upload
 label.experimentstatuspublic=Make it public
+label.email=Email address
+label.remind=Remind me
+label.oopsForgot=Forgot your password?
+label.userName=Metabolights username 
+label.needNewAccount=Create a new account
+label.firstName=First name(s)
+label.lastName=Last name
+label.affili=Affiliation
+label.country=Country
+label.create=Create
 
 msg.backToMainPage=Back to the main page.
 msg.invalidSessionHeader=Invalid session
@@ -19,7 +30,7 @@ msg.reqFieldMissing=Required field(s) are missing.
 msg.incorrUserPw=Incorrect user name and/or password.
 msg.loggedIn=You have successfully logged in.
 msg.loggedOut=You have successfully logged out.
-msg.credentials=Please provide username and password to be able to submit data to Metabolights.
+msg.credentials=Please provide username and password to submit data to Metabolights.
 msg.error.general=Oops, there was an error. The error has been logged and will be looked into.<br>We apologize for any incovenience.
 msg.upload=Please choose your IsaTab output file (zipped) for upload to the Metabolights server.
 msg.upload.notValid=Please provide a valid file name..
@@ -27,5 +38,17 @@ msg.uploaded.ok=Your file was uploaded successfully
 msg.uploaded.nowWhat1=What happens next?
 msg.uploaded.nowWhat2=We are processing your submission.<br>We will process your file and upload it into our database. For the time being this done manually, but we will automate this process soon.<br> 
 msg.uploaded.nowWhat3=We will send you a confirmation by e-mail once the file has been processed successfully. You will then also receive a Metabolights identifier and URL with which you can refer to your IsaTab experiment.   
+msg.pwreminder=Please fill in your registered email address and we will send you a password reminder.
+msg.pwreminder.body=You requested a password reminder for Metabolights. Your registered password is {0}.
+msg.pwsent=A password reminder was sent to {0}.
+msg.unknownEmail=The email address you entered is not registered with Metabolights.
+msg.newAccount=Enter your details to request a new account for Metabolights.
 
+NotNull.emailReminder.emailAddress=Email address must not be null.
+NotEmpty.emailReminder.emailAddress=Email address must not be empty.
+Size.emailReminder.emailAddress=Email address size must between 1 to 255 characters.
+Email.emailReminder.emailAddress=This does not look like a valid email address.
+
+NotEmpty.metabolightsUser.userName=fnorkn
+Email.metabolightsUser.email=This does not look AT ALL like a valid email address.
 
