User account manipulation
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@269 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapps/metabolights/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapps/metabolights/resources/messages_en.properties
@@ -1,3 +1,4 @@
+# Form labels
 label.footer=&copy; EMBL EBI
 label.username=Username
 label.password=Password
@@ -12,6 +13,7 @@ label.upload=Upload
 label.experimentstatuspublic=Make it public
 label.email=Email address
 label.remind=Remind me
+label.resetPw=Reset password
 label.oopsForgot=Forgot your password?
 label.userName=Metabolights username 
 label.needNewAccount=Create a new account
@@ -21,6 +23,9 @@ label.affili=Affiliation
 label.country=Country
 label.create=Create
 
+# Happy messages
+msg.metabolights=Metabolights: a database for metabolomics experiments and derived information
+msg.metabolightsLong=Metabolights is a database for Metabolomics experiments and derived information.  The database is cross-species, cross-technique and covers metabolite structures and their reference spectra as well as their biological roles, locations and concentrations, and experimental data from metabolic experiments.
 msg.backToMainPage=Back to the main page.
 msg.invalidSessionHeader=Invalid session
 msg.invalidSessionMsg=Your session appears to have timed out.
@@ -38,17 +43,46 @@ msg.uploaded.ok=Your file was uploaded successfully
 msg.uploaded.nowWhat1=What happens next?
 msg.uploaded.nowWhat2=We are processing your submission.<br>We will process your file and upload it into our database. For the time being this done manually, but we will automate this process soon.<br> 
 msg.uploaded.nowWhat3=We will send you a confirmation by e-mail once the file has been processed successfully. You will then also receive a Metabolights identifier and URL with which you can refer to your IsaTab experiment.   
-msg.pwreminder=Please fill in your registered email address and we will send you a password reminder.
-msg.pwreminder.body=You requested a password reminder for Metabolights. Your registered password is {0}.
-msg.pwsent=A password reminder was sent to {0}.
+msg.pwReset=Please fill in your registered email address and we will reset your password.
+msg.pwReset.body=You requested a password reset for Metabolights. Your registered password is {0}.
+msg.pwsent=A new password was sent to {0}.
 msg.unknownEmail=The email address you entered is not registered with Metabolights.
 msg.newAccount=Enter your details to request a new account for Metabolights.
+msg.accountInactive=This account is not active (yet).
+msg.starRequired=(*) indicates required field
+msg.mainPage=Back to the main page.
+msg.feedbackAccountRequestedHeader=New account created
+msg.feedbackAccountRequestedBody=Thank you, your account has been created but still needs to be <b>authorized</b>.<BR>\
+The Metabolights team has been notified and will review your account request.<BR><BR>\
+As soon as your account is activated you will be notified by email. You can then use your account to log in and submit data.<BR>\
+In the meantime if you have any questions, send us an <a href="mailto:metabolights-help@ebi.ac.uk">email</a>.
+msg.accountRequest=\n\nA new user ({0} {1}) has requested new account "{2}" for Metabolights.\
+\nPlease review the user request, activate the account (update status NEW->ACTIVE) and notify the user. \
+\n\nName        : {0} {1}\
+\nUser id     : {3} \
+\nEmail       : {4} \
+\nAffiliation : {5} \
+\nCountry     : {6}
+msg.passwordResetNotification="You (account {0}) have requested to reset your password for "Metabolights". Your new temporary password is: \
+\n\n{1} \
+\n\nPlease use this to log in and update your account with a new choice of password. 
 
-NotNull.emailReminder.emailAddress=Email address must not be null.
-NotEmpty.emailReminder.emailAddress=Email address must not be empty.
-Size.emailReminder.emailAddress=Email address size must between 1 to 255 characters.
-Email.emailReminder.emailAddress=This does not look like a valid email address.
 
-NotEmpty.metabolightsUser.userName=fnorkn
-Email.metabolightsUser.email=This does not look AT ALL like a valid email address.
+# For form field verification email 
+NotEmpty.emailAddress.emailAddress=Email address must not be empty.
+Size.emailAddress.emailAddress=Email address size must between 1 to 255 characters.
+Email.emailAddress.emailAddress=This does not look like a valid email address.
+
+# For form field verification MetabolightsUser
+NotEmpty.metabolightsUser.firstName=First name must not be empty
+NotEmpty.metabolightsUser.lastName=Last name must not be empty
+NotEmpty.metabolightsUser.userName=User name must not be empty
+NotEmpty.metabolightsUser.dbPassword=Password must not be empty
+NotEmpty.metabolightsUser.userVerifyDbPassword=Password must not be empty
+NotEmpty.metabolightsUser.email=Email must not be empty
+Email.metabolightsUser.email=This does not look like a valid email address.
+Match.metabolightsUser.passwords=Provided passwords do not match.
+Duplicate.metabolightsUser.userName=This user name already exists in our database.
+Size.metabolightsUser.password=The password should be at least six characters.
+Size.metabolightsUser.username=The user name should be at least three characters.
 
