Forgot to include in previous commit
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@270 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapps/metabolights/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapps/metabolights/resources/messages_en.properties
@@ -35,7 +35,7 @@ msg.reqFieldMissing=Required field(s) are missing.
 msg.incorrUserPw=Incorrect user name and/or password.
 msg.loggedIn=You have successfully logged in.
 msg.loggedOut=You have successfully logged out.
-msg.credentials=Please provide username and password to submit data to Metabolights.
+msg.credentials=Please provide username and password for authorized access.
 msg.error.general=Oops, there was an error. The error has been logged and will be looked into.<br>We apologize for any incovenience.
 msg.upload=Please choose your IsaTab output file (zipped) for upload to the Metabolights server.
 msg.upload.notValid=Please provide a valid file name..
@@ -63,10 +63,9 @@ msg.accountRequest=\n\nA new user ({0} {1}) has requested new account "{2}" for 
 \nEmail       : {4} \
 \nAffiliation : {5} \
 \nCountry     : {6}
-msg.passwordResetNotification="You (account {0}) have requested to reset your password for "Metabolights". Your new temporary password is: \
+msg.passwordResetNotification=You ({0}) have requested to reset your password for "Metabolights". Your new temporary password is: \
 \n\n{1} \
 \n\nPlease use this to log in and update your account with a new choice of password. 
-
 
 # For form field verification email 
 NotEmpty.emailAddress.emailAddress=Email address must not be empty.
