--- a/metabolights-webapps/src/main/webapps/metabolights/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapps/metabolights/resources/messages_en.properties
@@ -7,6 +7,7 @@ label.rememberme=Remember me
 label.login=Login
 label.submit=Submit
 label.search=search
+label.searchMetabolights=search metabolights
 label.file=File
 label.filename=File name
 label.upload=Upload
