user registration process for Metabolights finalized
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@280 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapps/metabolights/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapps/metabolights/resources/messages_en.properties
@@ -23,6 +23,16 @@ label.lastName=Last name
 label.affili=Affiliation
 label.country=Country
 label.create=Create
+label.cancel=Cancel
+label.update=Update
+
+menu.home=home
+menu.submit=submit
+menu.about=about
+menu.login=log in
+menu.myAccount=account
+menu.logout=log out  
+menu.loggedInAs=You are logged in as
 
 # Happy messages
 msg.metabolights=Metabolights: a database for metabolomics experiments and derived information
@@ -37,7 +47,7 @@ msg.incorrUserPw=Incorrect user name and/or password.
 msg.loggedIn=You have successfully logged in.
 msg.loggedOut=You have successfully logged out.
 msg.credentials=Please provide username and password for authorized access.
-msg.error.general=Oops, there was an error. The error has been logged and will be looked into.<br>We apologize for any incovenience.
+msg.error.general=There was an unexpected error.<br>
 msg.upload=Please choose your IsaTab output file (zipped) for upload to the Metabolights server.
 msg.upload.notValid=Please provide a valid file name..
 msg.uploaded.ok=Your file was uploaded successfully
@@ -49,25 +59,40 @@ msg.pwReset.body=You requested a password reset for Metabolights. Your registere
 msg.pwsent=A new password was sent to {0}.
 msg.unknownEmail=The email address you entered is not registered with Metabolights.
 msg.newAccount=Enter your details to request a new account for Metabolights.
+msg.updateAccount=These are your account details. You can make changes to the current values.
 msg.accountInactive=This account is not active (yet).
 msg.starRequired=(*) indicates required field
 msg.mainPage=Back to the main page.
 msg.feedbackAccountRequestedHeader=New account created
-msg.feedbackAccountRequestedBody=Thank you, your account has been created but still needs to be <b>authorized</b>.<BR>\
-The Metabolights team has been notified and will review your account request.<BR><BR>\
+msg.feedbackAccountRequestedBody=Thank you, your account has been provisionally created but still needs to be <b>verified</b>.<BR>\
+You have been sent an email to confirm your request for a new account.<BR>\
+After your confirmation, the Metabolights team will review the account request.<BR><BR>\
 As soon as your account is activated you will be notified by email. You can then use your account to log in and submit data.<BR>\
-In the meantime if you have any questions, send us an <a href="mailto:metabolights-help@ebi.ac.uk">email</a>.
+In the meantime if you have any questions, send us an <a href="mailto:metabolights-help@ebi.ac.uk">email</a>.<BR><BR>\
+Kind regards,<BR>\
+The Metabolights Team
+msg.confirmAccountRequest=\n\nThrough our Metabolights website (http://www.ebi.ac.uk/metabolights) we have received a request to create a new account linked to this email address.\
+\nPlease click this link to confirm that you have indeed requested this.\
+\n\nConfirm: {0}
 msg.accountRequest=\n\nA new user ({0} {1}) has requested new account "{2}" for Metabolights.\
-\nPlease review the user request, activate the account (update status NEW->ACTIVE) and notify the user. \
+\nPlease review the user request, and activate the account. \
 \n\nName        : {0} {1}\
 \nUser id     : {3} \
 \nEmail       : {4} \
 \nAffiliation : {5} \
-\nCountry     : {6}
+\nCountry     : {6}\
+\n\nYou can activate this account (and automatically notify the user) by clicking this link:\
+\n{7} 
 msg.passwordResetNotification=You ({0}) have requested to reset your password for "Metabolights". Your new temporary password is: \
 \n\n{1} \
 \n\nPlease use this to log in and update your account with a new choice of password. 
-
+msg.updatedAccount=You have successfully updated your account.
+msg.verifiedAccount=You have successfully verified your account
+msg.activatedAccount=You have successfully activated the account
+msg.accountActive=\n\nYour new Metabolights account "{0}" has been activated.\
+\nYou can now use this account to upload data to the Metabolights repository.\
+\n\nKind regards,\
+\nThe Metabolights Team
 # For form field verification email 
 NotEmpty.emailAddress.emailAddress=Email address must not be empty.
 Size.emailAddress.emailAddress=Email address size must between 1 to 255 characters.
@@ -85,4 +110,5 @@ Match.metabolightsUser.passwords=Provided passwords do not match.
 Duplicate.metabolightsUser.userName=This user name already exists in our database.
 Size.metabolightsUser.password=The password should be at least six characters.
 Size.metabolightsUser.username=The user name should be at least three characters.
+Duplicate.metabolightsUser.email=This email address already exists in our database.
 
