--- a/metabolights-webapps/src/main/webapps/metabolights/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapps/metabolights/resources/messages_en.properties
@@ -50,10 +50,12 @@ msg.credentials=Please provide username and password for authorized access.
 msg.error.general=There was an unexpected error.<br>
 msg.upload=Please choose your IsaTab output file (zipped) for upload to the Metabolights server.
 msg.upload.notValid=Please provide a valid file name..
-msg.uploaded.ok=Your file was uploaded successfully
-msg.uploaded.nowWhat1=What happens next?
-msg.uploaded.nowWhat2=We are processing your submission.<br>We will process your file and upload it into our database. For the time being this done manually, but we will automate this process soon.<br> 
-msg.uploaded.nowWhat3=We will send you a confirmation by e-mail once the file has been processed successfully. You will then also receive a Metabolights identifier and URL with which you can refer to your IsaTab experiment.   
+msg.uploaded.ok1=Congratulations!! You have successfully upload your experiment to Metabolights.
+msg.uploaded.ok2=Please, bear in mind that we have replaced your Ids with our unique Metabolights accession numbers.
+msg.uploaded.ok3=REPLACEMENT DETAILS
+msg.uploaded.ok4= has been replaced with 
+msg.uploaded.wrong=Upps! There was a problem during the submission process:
+msg.uploaded.checkListTitle=DETAILS
 msg.pwReset=Please fill in your registered email address and we will reset your password.
 msg.pwReset.body=You requested a password reset for Metabolights. Your registered password is {0}.
 msg.pwsent=A new password was sent to {0}.
@@ -64,28 +66,10 @@ msg.accountInactive=This account is not active (yet).
 msg.starRequired=(*) indicates required field
 msg.mainPage=Back to the main page.
 msg.feedbackAccountRequestedHeader=New account created
-msg.feedbackAccountRequestedBody=Thank you, your account has been provisionally created but still needs to be <b>verified</b>.<BR>\
-You have been sent an email to confirm your request for a new account.<BR>\
-After your confirmation, the Metabolights team will review the account request.<BR><BR>\
-As soon as your account is activated you will be notified by email. You can then use your account to log in and submit data.<BR>\
-In the meantime if you have any questions, send us an <a href="mailto:metabolights-help@ebi.ac.uk">email</a>.<BR><BR>\
-Kind regards,<BR>\
-The Metabolights Team
-msg.confirmAccountRequest=\n\nThrough our Metabolights website (http://www.ebi.ac.uk/metabolights) we have received a request to create a new account linked to this email address.\
-\nPlease click this link to confirm that you have indeed requested this.\
-\n\nConfirm: {0}
-msg.accountRequest=\n\nA new user ({0} {1}) has requested new account "{2}" for Metabolights.\
-\nPlease review the user request, and activate the account. \
-\n\nName        : {0} {1}\
-\nUser id     : {3} \
-\nEmail       : {4} \
-\nAffiliation : {5} \
-\nCountry     : {6}\
-\n\nYou can activate this account (and automatically notify the user) by clicking this link:\
-\n{7} 
-msg.passwordResetNotification=You ({0}) have requested to reset your password for "Metabolights". Your new temporary password is: \
-\n\n{1} \
-\n\nPlease use this to log in and update your account with a new choice of password. 
+msg.feedbackAccountRequestedBody=Thank you, your account has been provisionally created but still needs to be <b>verified</b>.<BR>You have been sent an email to confirm your request for a new account.<BR>After your confirmation, the Metabolights team will review the account request.<BR><BR>As soon as your account is activated you will be notified by email. You can then use your account to log in and submit data.<BR>In the meantime if you have any questions, send us an <a href\="mailto\:metabolights-help@ebi.ac.uk">email</a>.<BR><BR>Kind regards,<BR>The Metabolights Team
+msg.confirmAccountRequest=\n\nThrough our Metabolights website (http\://www.ebi.ac.uk/metabolights) we have received a request to create a new account linked to this email address.\nPlease click this link to confirm that you have indeed requested this.\n\nConfirm\: {0}
+msg.accountRequest=\n\nA new user ({0} {1}) has requested new account "{2}" for Metabolights.\nPlease review the user request, and activate the account. \n\nName        \: {0} {1}\nUser id     \: {3} \nEmail       \: {4} \nAffiliation \: {5} \nCountry     \: {6}\n\nYou can activate this account (and automatically notify the user) by clicking this link\:\n{7} 
+msg.passwordResetNotification=You ({0}) have requested to reset your password for "Metabolights". Your new temporary password is\: \n\n{1} \n\nPlease use this to log in and update your account with a new choice of password. 
 msg.updatedAccount=You have successfully updated your account.
 msg.verifiedAccount=You have successfully verified your account
 msg.activatedAccount=You have successfully activated the account
