Further tinkering with the search result page
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@367 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapps/metabolights/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapps/metabolights/resources/messages_en.properties
@@ -25,6 +25,12 @@ label.country=Country
 label.create=Create
 label.cancel=Cancel
 label.update=Update
+label.expFact=Experimental factors
+label.expId=Experimental identifier
+label.subm=Submitted by
+label.assays=Assays
+label.pubBy=Publication by 
+label.pubIn=see publication in
 
 menu.home=home
 menu.submit=submit
@@ -36,7 +42,13 @@ menu.loggedInAs=You are logged in as
 
 # Happy messages
 msg.metabolights=Metabolights: a database for metabolomics experiments and derived information
-msg.metabolightsLong=Metabolights is a database for Metabolomics experiments and derived information.  The database is cross-species, cross-technique and covers metabolite structures and their reference spectra as well as their biological roles, locations and concentrations, and experimental data from metabolic experiments.
+msg.metabolightsAbout1=Metabolights is a database for Metabolomics experiments and derived information.  The database is cross-species, cross-technique and covers metabolite structures and their reference spectra as well as their biological roles, locations and concentrations, and experimental data from metabolic experiments.
+msg.metabolightsAbout2=We will provide search services around spectral similarities and chemical structres.  
+msg.metabolightsAbout3=We will also offer user-submission tools and have strong reporting capabilities. We will utilise and further develop de-facto standard formats where various components are encapsulated, such as the encoded spectral and chromatographic data, and associated information about the chemical structure, as well as metadata describing assays and the study as a whole.
+msg.metabolightsAbout4=Metabolights's semantic quality will be based on various controlled vocabularies linking data to existing resources such as BRENDA (tissue ontology) and other established ontologies. We are dedicated to collaborate closely with major parties in world-wide metabolomics communities, such as the Metabolomics Society and the Metabolomics Standards Initiative.
+msg.metabolightsAbout5=The development op Metabolights is funded by the BBSRC, grant reference <A href="http://www.bbsrc.ac.uk/pa/grants/AwardDetails.aspx?FundingReference=BB/I000933/1">BB/I000933/1</A>.<br>The funding is for a project that will instantiate, at the European Bioinformatics Institute (EBI) in Hinxton, Cambridge, UK, the MetaboloLights Metabolomics database with various different components focused on both data standards and primary experimental data. The resource will be cross-species, cross-application and will cover all relevant analytical methods. Metabolights is a joint between development between the <a href="http://www.ebi.ac.uk/steinbeck/">Steinbeck group</a> at the European Bionformatics Institute and the Griffin group in Cambridge.
+msg.metabolightsAbout6=Experimental data gets submitted to Metabolights in <a href="http://isatab.sourceforge.net/index.html">isatab</a> format. The Investigation/Study/Assay (ISA) infrastructure is the first general-purpose format and freely available desktop software suite targeted to experimentalists, curators and developers and that assists in the reporting and local management of experimental metadata (i.e. sample characteristics, technology and measurement types, sample-to-data relationships) from studies employing one or a combination of technologies.
+
 msg.backToMainPage=Back to the main page.
 msg.invalidSessionHeader=Invalid session
 msg.invalidSessionMsg=Your session appears to have timed out.
@@ -77,6 +89,9 @@ msg.accountActive=\n\nYour new Metabolights account "{0}" has been activated.\
 \nYou can now use this account to upload data to the Metabolights repository.\
 \n\nKind regards,\
 \nThe Metabolights Team
+msg.searchResults=Search results
+msg.nothingFound=No results were found for your query.
+
 # For form field verification email 
 NotEmpty.emailAddress.emailAddress=Email address must not be empty.
 Size.emailAddress.emailAddress=Email address size must between 1 to 255 characters.
