Search results and detail page changes
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@420 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -31,6 +31,13 @@ label.subm=Submitted by
 label.assays=Assays
 label.pubBy=Publication by 
 label.pubIn=see publication in
+label.metaboLightsEntry=MetaboLights Entry
+label.title=Title
+label.organism=Organism(s)
+label.description=Description
+label.design=Design(s)
+label.properties=Propertie(s)
+label.sampleAttr=Sample Attribute(s)
 
 menu.home=home
 menu.submit=submit
