Search results and detail page changes
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@444 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -38,6 +38,7 @@ label.description=Description
 label.design=Design(s)
 label.properties=Propertie(s)
 label.sampleAttr=Sample Attribute(s)
+label.technology=Technology
 
 menu.home=home
 menu.submit=submit
