Add label for platforms
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@457 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -39,6 +39,7 @@ label.design=Design(s)
 label.properties=Propertie(s)
 label.sampleAttr=Sample Attribute(s)
 label.technology=Technology
+label.platforms=Platform
 
 menu.home=home
 menu.submit=submit
