--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -100,6 +100,7 @@ msg.accountActive=\n\nYour new Metabolights account "{0}" has been activated.\
 \nThe Metabolights Team
 msg.searchResults=Search results
 msg.nothingFound=No results were found for your query.
+msg.indexed=Database indexed.
 
 # For form field verification email 
 NotEmpty.emailAddress.emailAddress=Email address must not be empty.
