Search result tweaks
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@521 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -30,7 +30,7 @@ label.expId=Experimental identifier
 label.subm=Submitted by
 label.assays=Assays
 label.pubBy=Publication by 
-label.pubIn=see publication in
+label.pubIn=See publication
 label.metaboLightsEntry=MetaboLights Entry
 label.title=Title
 label.organism=Organism(s)
