New paging mechanism, no Javascript
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@549 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -98,7 +98,7 @@ msg.accountActive=\n\nYour new Metabolights account "{0}" has been activated.\
 \nYou can now use this account to upload data to the Metabolights repository.\
 \n\nKind regards,\
 \nThe Metabolights Team
-msg.searchResults=Search results
+msg.searchResults=Search result(s)
 msg.nothingFound=No results were found for your query.
 msg.indexed=Database indexed.
 msg.organisms=Organisms
