Spelling corrections and addition of Private label
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@558 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -28,6 +28,7 @@ label.update=Update
 label.expFact=Experimental factors
 label.expId=Experimental identifier
 label.subm=Submitted by
+label.expPrivate=PRIVATE
 label.assays=Assays
 label.pubBy=Publication by 
 label.pubIn=See publication
@@ -72,10 +73,10 @@ msg.error.general=There was an unexpected error.<br>
 msg.upload=Please choose your IsaTab output file (zipped) for upload to the Metabolights server.
 msg.upload.notValid=Please provide a valid file name..
 msg.uploaded.ok1=Congratulations!! You have successfully upload your experiment to Metabolights.
-msg.uploaded.ok2=Please, bear in mind that we have replaced your Ids with our unique Metabolights accession numbers.
+msg.uploaded.ok2=Please, bare in mind that we have replaced your Ids with our unique Metabolights accession numbers.
 msg.uploaded.ok3=REPLACEMENT DETAILS
 msg.uploaded.ok4= has been replaced with 
-msg.uploaded.wrong=Upps! There was a problem during the submission process:
+msg.uploaded.wrong=Opps! There was a problem during the submission process:
 msg.uploaded.checkListTitle=DETAILS
 msg.pwReset=Please fill in your registered email address and we will reset your password.
 msg.pwReset.body=You requested a password reset for Metabolights. Your registered password is {0}.
