Changes: - made email address the username - added affiliation url (also to .sql file) - made the filter div box only claim width when necessary - removed jdbc.properties and moved these into application.properties. It's easy to have only one, which can then be refered in spring servlet xml - removed isatab blur from about page
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@561 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -1,6 +1,6 @@
 # Form labels
 label.footer=&copy; EMBL EBI
-label.username=Username
+label.username=Account
 label.password=Password
 label.passwordRep=Password (repeated)
 label.rememberme=Remember me
@@ -16,11 +16,12 @@ label.email=Email address
 label.remind=Remind me
 label.resetPw=Reset password
 label.oopsForgot=Forgot your password?
-label.userName=Metabolights username 
+label.userName=Metabolights account 
 label.needNewAccount=Create a new account
 label.firstName=First name(s)
 label.lastName=Last name
 label.affili=Affiliation
+label.affiliUrl=URL for affiliation
 label.country=Country
 label.create=Create
 label.cancel=Cancel
@@ -48,7 +49,7 @@ menu.about=about
 menu.login=log in
 menu.myAccount=account
 menu.logout=log out  
-menu.loggedInAs=You are logged in as
+menu.loggedInAs=Logged in as
 
 # Happy messages
 msg.metabolights=Metabolights: a database for metabolomics experiments and derived information
@@ -68,7 +69,7 @@ msg.reqFieldMissing=Required field(s) are missing.
 msg.incorrUserPw=Incorrect user name and/or password.
 msg.loggedIn=You have successfully logged in.
 msg.loggedOut=You have successfully logged out.
-msg.credentials=Please provide username and password for authorized access.
+msg.credentials=Please provide your email and password for authorized access.
 msg.error.general=There was an unexpected error.<br>
 msg.upload=Please choose your IsaTab output file (zipped) for upload to the Metabolights server.
 msg.upload.notValid=Please provide a valid file name..
@@ -90,7 +91,7 @@ msg.mainPage=Back to the main page.
 msg.feedbackAccountRequestedHeader=New account created
 msg.feedbackAccountRequestedBody=Thank you, your account has been provisionally created but still needs to be <b>verified</b>.<BR>You have been sent an email to confirm your request for a new account.<BR>After your confirmation, the Metabolights team will review the account request.<BR><BR>As soon as your account is activated you will be notified by email. You can then use your account to log in and submit data.<BR>In the meantime if you have any questions, send us an <a href\="mailto\:metabolights-help@ebi.ac.uk">email</a>.<BR><BR>Kind regards,<BR>The Metabolights Team
 msg.confirmAccountRequest=\n\nThrough our Metabolights website (http\://www.ebi.ac.uk/metabolights) we have received a request to create a new account linked to this email address.\nPlease click this link to confirm that you have indeed requested this.\n\nConfirm\: {0}
-msg.accountRequest=\n\nA new user ({0} {1}) has requested new account "{2}" for Metabolights.\nPlease review the user request, and activate the account. \n\nName        \: {0} {1}\nUser id     \: {3} \nEmail       \: {4} \nAffiliation \: {5} \nCountry     \: {6}\n\nYou can activate this account (and automatically notify the user) by clicking this link\:\n{7} 
+msg.accountRequest=\n\nA new user ({0} {1}) has requested "{2}" to be used for Metabolights.\nPlease review the user request, and activate the account. \n\nName        \: {0} {1}\nUser id     \: {3} \nEmail       \: {4} \nAffiliation \: {5} \nAff. URL    \: {6}  \nCountry     \: {7}\n\nYou can activate this account (and automatically notify the user) by clicking this link\:\n{8} 
 msg.passwordResetNotification=You ({0}) have requested to reset your password for "Metabolights". Your new temporary password is\: \n\n{1} \n\nPlease use this to log in and update your account with a new choice of password. 
 msg.updatedAccount=You have successfully updated your account.
 msg.verifiedAccount=You have successfully verified your account
@@ -104,6 +105,10 @@ msg.nothingFound=No results were found for your query.
 msg.indexed=Database indexed.
 msg.organisms=Organisms
 msg.technologies=Technologies
+msg.showing=showing
+msg.to=to 
+
+
 
 # For form field verification email 
 NotEmpty.emailAddress.emailAddress=Email address must not be empty.
