--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -7,7 +7,7 @@ label.rememberme=Remember me
 label.login=Login
 label.submit=Submit
 label.search=search
-label.searchMetabolights=search metabolights
+label.searchMetabolights=search MetaboLights
 label.file=File
 label.filename=File name
 label.upload=Upload
@@ -16,7 +16,7 @@ label.email=Email address
 label.remind=Remind me
 label.resetPw=Reset password
 label.oopsForgot=Forgot your password?
-label.userName=Metabolights account 
+label.userName=MetaboLights account 
 label.needNewAccount=Create a new account
 label.firstName=First name(s)
 label.lastName=Last name
@@ -42,6 +42,8 @@ label.properties=Propertie(s)
 label.sampleAttr=Sample Attribute(s)
 label.technology=Technology
 label.platforms=Platform
+label.contact=Contact MetaboLights 
+label.message=Message to the MetaboLights team
 
 menu.home=home
 menu.submit=submit
@@ -50,15 +52,16 @@ menu.login=log in
 menu.myAccount=account
 menu.logout=log out  
 menu.loggedInAs=Logged in as
+menu.contact=Contact Us
 
 # Happy messages
-msg.metabolights=Metabolights: a database for metabolomics experiments and derived information
-msg.metabolightsAbout1=Metabolights is a database for Metabolomics experiments and derived information.  The database is cross-species, cross-technique and covers metabolite structures and their reference spectra as well as their biological roles, locations and concentrations, and experimental data from metabolic experiments.
+msg.metabolights=MetaboLights: a database for metabolomics experiments and derived information
+msg.metabolightsAbout1=MetaboLights is a database for Metabolomics experiments and derived information.  The database is cross-species, cross-technique and covers metabolite structures and their reference spectra as well as their biological roles, locations and concentrations, and experimental data from metabolic experiments.
 msg.metabolightsAbout2=We will provide search services around spectral similarities and chemical structres.  
 msg.metabolightsAbout3=We will also offer user-submission tools and have strong reporting capabilities. We will utilise and further develop de-facto standard formats where various components are encapsulated, such as the encoded spectral and chromatographic data, and associated information about the chemical structure, as well as metadata describing assays and the study as a whole.
-msg.metabolightsAbout4=Metabolights's semantic quality will be based on various controlled vocabularies linking data to existing resources such as BRENDA (tissue ontology) and other established ontologies. We are dedicated to collaborate closely with major parties in world-wide metabolomics communities, such as the Metabolomics Society and the Metabolomics Standards Initiative.
-msg.metabolightsAbout5=The development op Metabolights is funded by the BBSRC, grant reference <A href="http://www.bbsrc.ac.uk/pa/grants/AwardDetails.aspx?FundingReference=BB/I000933/1">BB/I000933/1</A>.<br>The funding is for a project that will instantiate, at the European Bioinformatics Institute (EBI) in Hinxton, Cambridge, UK, the MetaboloLights Metabolomics database with various different components focused on both data standards and primary experimental data. The resource will be cross-species, cross-application and will cover all relevant analytical methods. Metabolights is a joint between development between the <a href="http://www.ebi.ac.uk/steinbeck/">Steinbeck group</a> at the European Bionformatics Institute and the Griffin group in Cambridge.
-msg.metabolightsAbout6=Experimental data gets submitted to Metabolights in <a href="http://isatab.sourceforge.net/index.html">isatab</a> format. The Investigation/Study/Assay (ISA) infrastructure is the first general-purpose format and freely available desktop software suite targeted to experimentalists, curators and developers and that assists in the reporting and local management of experimental metadata (i.e. sample characteristics, technology and measurement types, sample-to-data relationships) from studies employing one or a combination of technologies.
+msg.metabolightsAbout4=MetaboLights semantic quality will be based on various controlled vocabularies linking data to existing resources such as BRENDA (tissue ontology) and other established ontologies. We are dedicated to collaborate closely with major parties in world-wide metabolomics communities, such as the Metabolomics Society and the Metabolomics Standards Initiative.
+msg.metabolightsAbout5=The development of MetaboLights is funded by the BBSRC, grant reference <A href="http://www.bbsrc.ac.uk/pa/grants/AwardDetails.aspx?FundingReference=BB/I000933/1">BB/I000933/1</A>.<br>The funding is for a project that will instantiate, at the European Bioinformatics Institute (EBI) in Hinxton, Cambridge, UK, the MetaboloLights Metabolomics database with various different components focused on both data standards and primary experimental data. The resource will be cross-species, cross-application and will cover all relevant analytical methods. MetaboLights is a joint between development between the <a href="http://www.ebi.ac.uk/steinbeck/">Steinbeck group</a> at the European Bioinformatics Institute and the Griffin group in Cambridge.
+msg.metabolightsAbout6=Experimental data gets submitted to MetaboLights in <a href="http://isatab.sourceforge.net/index.html">isatab</a> format. The Investigation/Study/Assay (ISA) infrastructure is the first general-purpose format and freely available desktop software suite targeted to experimentalists, curators and developers and that assists in the reporting and local management of experimental metadata (i.e. sample characteristics, technology and measurement types, sample-to-data relationships) from studies employing one or a combination of technologies.
 
 msg.backToMainPage=Back to the main page.
 msg.invalidSessionHeader=Invalid session
@@ -71,35 +74,35 @@ msg.loggedIn=You have successfully logged in.
 msg.loggedOut=You have successfully logged out.
 msg.credentials=Please provide your email and password for authorized access.
 msg.error.general=There was an unexpected error.<br>
-msg.upload=Please choose your IsaTab output file (zipped) for upload to the Metabolights server.
+msg.upload=Please choose your IsaTab output file (zip archive) for upload to the MetaboLights server.
 msg.upload.notValid=Please provide a valid file name..
-msg.uploaded.ok1=Congratulations!! You have successfully upload your experiment to Metabolights.
-msg.uploaded.ok2=Please, bare in mind that we have replaced your Ids with our unique Metabolights accession numbers.
+msg.uploaded.ok1=You have successfully upload your experiment to MetaboLights.
+msg.uploaded.ok2=Please, bare in mind that we have replaced your Id's with our unique MetaboLights accession numbers.
 msg.uploaded.ok3=REPLACEMENT DETAILS
 msg.uploaded.ok4= has been replaced with 
-msg.uploaded.wrong=Opps! There was a problem during the submission process:
+msg.uploaded.wrong=There was a problem during the submission process:
 msg.uploaded.checkListTitle=DETAILS
 msg.pwReset=Please fill in your registered email address and we will reset your password.
-msg.pwReset.body=You requested a password reset for Metabolights. Your registered password is {0}.
+msg.pwReset.body=You requested a password reset for MetaboLights. Your registered password is {0}.
 msg.pwsent=A new password was sent to {0}.
-msg.unknownEmail=The email address you entered is not registered with Metabolights.
-msg.newAccount=Enter your details to request a new account for Metabolights.
+msg.unknownEmail=The email address you entered is not registered with MetaboLights.
+msg.newAccount=Enter your details to request a new account for MetaboLights.
 msg.updateAccount=These are your account details. You can make changes to the current values.
 msg.accountInactive=This account is not active (yet).
 msg.starRequired=(*) indicates required field
 msg.mainPage=Back to the main page.
 msg.feedbackAccountRequestedHeader=New account created
-msg.feedbackAccountRequestedBody=Thank you, your account has been provisionally created but still needs to be <b>verified</b>.<BR>You have been sent an email to confirm your request for a new account.<BR>After your confirmation, the Metabolights team will review the account request.<BR><BR>As soon as your account is activated you will be notified by email. You can then use your account to log in and submit data.<BR>In the meantime if you have any questions, send us an <a href\="mailto\:metabolights-help@ebi.ac.uk">email</a>.<BR><BR>Kind regards,<BR>The Metabolights Team
-msg.confirmAccountRequest=\n\nThrough our Metabolights website (http\://www.ebi.ac.uk/metabolights) we have received a request to create a new account linked to this email address.\nPlease click this link to confirm that you have indeed requested this.\n\nConfirm\: {0}
-msg.accountRequest=\n\nA new user ({0} {1}) has requested "{2}" to be used for Metabolights.\nPlease review the user request, and activate the account. \n\nName        \: {0} {1}\nUser id     \: {3} \nEmail       \: {4} \nAffiliation \: {5} \nAff. URL    \: {6}  \nCountry     \: {7}\n\nYou can activate this account (and automatically notify the user) by clicking this link\:\n{8} 
-msg.passwordResetNotification=You ({0}) have requested to reset your password for "Metabolights". Your new temporary password is\: \n\n{1} \n\nPlease use this to log in and update your account with a new choice of password. 
+msg.feedbackAccountRequestedBody=Thank you, your account has been provisionally created but still needs to be <b>verified</b>.<BR>You have been sent an email to confirm your request for a new account.<BR>After your confirmation, the MetaboLights team will review the account request.<BR><BR>As soon as your account is activated you will be notified by email. You can then use your account to log in and submit data.<BR>In the meantime if you have any questions, send us an <a href\="mailto\:metabolights-help@ebi.ac.uk">email</a>.<BR><BR>Kind regards,<BR>The MetaboLights Team
+msg.confirmAccountRequest=\n\nThrough our MetaboLights website (http\://www.ebi.ac.uk/metabolights) we have received a request to create a new account linked to this email address.\nPlease click this link to confirm that you have indeed requested this.\n\nConfirm\: {0}
+msg.accountRequest=\n\nA new user ({0} {1}) has requested "{2}" to be used for MetaboLights.\nPlease review the user request, and activate the account. \n\nName        \: {0} {1}\nUser id     \: {3} \nEmail       \: {4} \nAffiliation \: {5} \nAff. URL    \: {6}  \nCountry     \: {7}\n\nYou can activate this account (and automatically notify the user) by clicking this link\:\n{8} 
+msg.passwordResetNotification=You ({0}) have requested to reset your password for "MetaboLights". Your new temporary password is\: \n\n{1} \n\nPlease use this to log in and update your account with a new choice of password. 
 msg.updatedAccount=You have successfully updated your account.
 msg.verifiedAccount=You have successfully verified your account
 msg.activatedAccount=You have successfully activated the account
-msg.accountActive=\n\nYour new Metabolights account "{0}" has been activated.\
-\nYou can now use this account to upload data to the Metabolights repository.\
+msg.accountActive=\n\nYour new MetaboLights account "{0}" has been activated.\
+\nYou can now use this account to upload data to the MetaboLights repository.\
 \n\nKind regards,\
-\nThe Metabolights Team
+\nThe MetaboLights Team
 msg.searchResults=Search result(s)
 msg.nothingFound=No results were found for your query.
 msg.indexed=Database indexed.
@@ -107,6 +110,9 @@ msg.organisms=Organisms
 msg.technologies=Technologies
 msg.showing=showing
 msg.to=to 
+msg.emailSent=Message Sent
+msg.emailContactUsFrom=Message from MetaboLights website
+msg.emailContactUsTo=Message to the MetaboLights team
 
 
 
@@ -128,4 +134,5 @@ Duplicate.metabolightsUser.userName=This user name already exists in our databas
 Size.metabolightsUser.password=The password should be at least six characters.
 Size.metabolightsUser.username=The user name should be at least three characters.
 Duplicate.metabolightsUser.email=This email address already exists in our database.
+NotEmpty.concatUsForm.message=Message must not be empty
 
