Link to an empty how to submit data page
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@579 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -53,6 +53,7 @@ menu.myAccount=account
 menu.logout=log out  
 menu.loggedInAs=Logged in as
 menu.contact=Contact Us
+menu.submitHelp=How to submit data to MetaboLights
 
 # Happy messages
 msg.metabolights=MetaboLights: a database for metabolomics experiments and derived information
