Changed "MetaboLights account" to "Email Address"
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@584 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -16,7 +16,7 @@ label.email=Email address
 label.remind=Remind me
 label.resetPw=Reset password
 label.oopsForgot=Forgot your password?
-label.userName=MetaboLights account 
+label.userName=Email Address 
 label.needNewAccount=Create a new account
 label.firstName=First name(s)
 label.lastName=Last name
