Link back to submit page
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@594 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -65,6 +65,7 @@ msg.metabolightsAbout5=The development of MetaboLights is funded by the BBSRC, g
 msg.metabolightsAbout6=Experimental data gets submitted to MetaboLights in <a href="http://isatab.sourceforge.net/index.html">isatab</a> format. The Investigation/Study/Assay (ISA) infrastructure is the first general-purpose format and freely available desktop software suite targeted to experimentalists, curators and developers and that assists in the reporting and local management of experimental metadata (i.e. sample characteristics, technology and measurement types, sample-to-data relationships) from studies employing one or a combination of technologies.
 
 msg.backToMainPage=Back to the main page.
+msg.backToSubmitPage=Try submission again?.
 msg.invalidSessionHeader=Invalid session
 msg.invalidSessionMsg=Your session appears to have timed out.
 msg.loggedOutHeader=Logged Out
