Protected submission page from double submit
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@601 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -9,6 +9,7 @@ label.submit=Submit
 label.search=search
 label.searchMetabolights=search MetaboLights
 label.file=File
+label.isatabZipFile=ISA-Tab zip file
 label.filename=File name
 label.upload=Upload
 label.experimentstatuspublic=Make it public
@@ -78,8 +79,8 @@ msg.credentials=Please provide your email and password for authorized access.
 msg.error.general=There was an unexpected error.<br>
 msg.upload=Please choose your IsaTab output file (zip archive) for upload to the MetaboLights server.
 msg.upload.notValid=Please provide a valid file name..
-msg.uploaded.ok1=You have successfully upload your experiment to MetaboLights.
-msg.uploaded.ok2=Please, bare in mind that we have replaced your Id's with our unique MetaboLights accession numbers.
+msg.uploaded.ok1=You have successfully uploaded your experiment to MetaboLights.
+msg.uploaded.ok2=Please, bare in mind that we have replaced your identifiers with our unique MetaboLights accession numbers.
 msg.uploaded.ok3=REPLACEMENT DETAILS
 msg.uploaded.ok4= has been replaced with 
 msg.uploaded.wrong=There was a problem during the submission process:
@@ -105,6 +106,7 @@ msg.accountActive=\n\nYour new MetaboLights account "{0}" has been activated.\
 \nYou can now use this account to upload data to the MetaboLights repository.\
 \n\nKind regards,\
 \nThe MetaboLights Team
+msg.pleaseWaitForUpload=Please wait a while for the file to be validated and processed... 
 msg.searchResults=Search result(s)
 msg.nothingFound=No results were found for your query.
 msg.indexed=Database indexed.
