--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -27,22 +27,24 @@ label.country=Country
 label.create=Create
 label.cancel=Cancel
 label.update=Update
+label.releaseDate=Study Release Date
 label.expFact=Experimental factors
-label.expId=Experimental identifier
+label.expId=Study identifier
 label.subm=Submitted by
-label.expPrivate=PRIVATE
+label.expPrivate=Private study
 label.assays=Assays
 label.pubBy=Publication by 
 label.pubIn=See publication
 label.metaboLightsEntry=MetaboLights Entry
 label.title=Title
 label.organism=Organism(s)
+label.technology=Technology
+label.platforms=Platform
+label.status=Privacy
 label.description=Description
 label.design=Design(s)
 label.properties=Propertie(s)
 label.sampleAttr=Sample Attribute(s)
-label.technology=Technology
-label.platforms=Platform
 label.contact=Contact MetaboLights 
 label.message=Message to the MetaboLights team
 
@@ -110,13 +112,17 @@ msg.pleaseWaitForUpload=Please wait a while for the file to be validated and pro
 msg.searchResults=Search result(s)
 msg.nothingFound=No results were found for your query.
 msg.indexed=Database indexed.
-msg.organisms=Organisms
-msg.technologies=Technologies
+#msg.organisms=Organisms
+#msg.technologies=Technologies
 msg.showing=showing
 msg.to=to 
 msg.emailSent=Message Sent
 msg.emailContactUsFrom=Message from MetaboLights website
 msg.emailContactUsTo=Message to the MetaboLights team
+msg.welcomeWithStudies=Thanks {0}! You''ve submitted {1} studies.
+msg.welcomeWithoutStudies=Hi {0}! You''ve no studies yet.
+msg.submitted=You've submitted
+msg.studies=studies
 
 
 
