--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -53,19 +53,23 @@ menu.submit=submit
 menu.about=about
 menu.login=log in
 menu.myAccount=account
-menu.logout=log out  
+menu.logout=log out
 menu.loggedInAs=Logged in as
 menu.contact=Contact Us
 menu.submitHelp=How to submit data to MetaboLights
+menu.download=download
+menu.downloadHelp=How to download data from MetaboLights
 
 # Happy messages
 msg.metabolights=MetaboLights: a database for metabolomics experiments and derived information
-msg.metabolightsAbout1=MetaboLights is a database for Metabolomics experiments and derived information.  The database is cross-species, cross-technique and covers metabolite structures and their reference spectra as well as their biological roles, locations and concentrations, and experimental data from metabolic experiments.
+msg.metabolightsAbout1=MetaboLights is a database for Metabolomics experiments and derived information.  The database is cross-species, cross-technique and covers metabolite structures and their reference spectra as well as their biological roles, locations and concentrations, and experimental data from metabolic experiments. <a href="about">About MetaboLights.</a>
 msg.metabolightsAbout2=We will provide search services around spectral similarities and chemical structres.  
 msg.metabolightsAbout3=We will also offer user-submission tools and have strong reporting capabilities. We will utilise and further develop de-facto standard formats where various components are encapsulated, such as the encoded spectral and chromatographic data, and associated information about the chemical structure, as well as metadata describing assays and the study as a whole.
 msg.metabolightsAbout4=MetaboLights semantic quality will be based on various controlled vocabularies linking data to existing resources such as BRENDA (tissue ontology) and other established ontologies. We are dedicated to collaborate closely with major parties in world-wide metabolomics communities, such as the Metabolomics Society and the Metabolomics Standards Initiative.
 msg.metabolightsAbout5=The development of MetaboLights is funded by the BBSRC, grant reference <A href="http://www.bbsrc.ac.uk/pa/grants/AwardDetails.aspx?FundingReference=BB/I000933/1">BB/I000933/1</A>.<br>The funding is for a project that will instantiate, at the European Bioinformatics Institute (EBI) in Hinxton, Cambridge, UK, the MetaboloLights Metabolomics database with various different components focused on both data standards and primary experimental data. The resource will be cross-species, cross-application and will cover all relevant analytical methods. MetaboLights is a joint between development between the <a href="http://www.ebi.ac.uk/steinbeck/">Steinbeck group</a> at the European Bioinformatics Institute and the Griffin group in Cambridge.
 msg.metabolightsAbout6=Experimental data gets submitted to MetaboLights in <a href="http://isatab.sourceforge.net/index.html">isatab</a> format. The Investigation/Study/Assay (ISA) infrastructure is the first general-purpose format and freely available desktop software suite targeted to experimentalists, curators and developers and that assists in the reporting and local management of experimental metadata (i.e. sample characteristics, technology and measurement types, sample-to-data relationships) from studies employing one or a combination of technologies.
+msg.metabolightsAbout7=All public MetaboLights experiments can be downloaded from our public <a href="ftp://ftp.ebi.ac.uk/pub/databases/metabolights/">ftp archive</a>.  Please find zip archives under the "studies" folder. \nEach public study can be found under the corresponding MTBLS-id folder.  \n\
+  Complete experiments can be opened with ISACreator or you can extract the archives using your normal unzip program.
 
 msg.backToMainPage=Back to the main page.
 msg.backToSubmitPage=Try submission again?.
@@ -97,7 +101,8 @@ msg.accountInactive=This account is not active (yet).
 msg.starRequired=(*) indicates required field
 msg.mainPage=Back to the main page.
 msg.feedbackAccountRequestedHeader=New account created
-msg.feedbackAccountRequestedBody=Thank you, your account has been provisionally created but still needs to be <b>verified</b>.<BR>You have been sent an email to confirm your request for a new account.<BR>After your confirmation, the MetaboLights team will review the account request.<BR><BR>As soon as your account is activated you will be notified by email. You can then use your account to log in and submit data.<BR>In the meantime if you have any questions, send us an <a href\="mailto\:metabolights-help@ebi.ac.uk">email</a>.<BR><BR>Kind regards,<BR>The MetaboLights Team
+msg.feedbackAccountRequestedDetails=Your account details
+msg.feedbackAccountRequestedBody=Thank you, your account has been provisionally created but still needs to be <b>verified</b>.<BR>You have been sent an email to confirm your request for a new account.<BR>After your confirmation, the MetaboLights team will review the account request.<BR><BR>As soon as your account is activated you will be notified by email. You can then use your account to log in and submit data.<BR>In the meantime if you have any questions, <a href="contact">please contact us</a>.<BR><BR>Kind regards,<BR>The MetaboLights Team
 msg.confirmAccountRequest=\n\nThrough our MetaboLights website (http\://www.ebi.ac.uk/metabolights) we have received a request to create a new account linked to this email address.\nPlease click this link to confirm that you have indeed requested this.\n\nConfirm\: {0}
 msg.accountRequest=\n\nA new user ({0} {1}) has requested "{2}" to be used for MetaboLights.\nPlease review the user request, and activate the account. \n\nName        \: {0} {1}\nUser id     \: {3} \nEmail       \: {4} \nAffiliation \: {5} \nAff. URL    \: {6}  \nCountry     \: {7}\n\nYou can activate this account (and automatically notify the user) by clicking this link\:\n{8} 
 msg.passwordResetNotification=You ({0}) have requested to reset your password for "MetaboLights". Your new temporary password is\: \n\n{1} \n\nPlease use this to log in and update your account with a new choice of password. 
@@ -120,11 +125,9 @@ msg.emailSent=Message Sent
 msg.emailContactUsFrom=Message from MetaboLights website
 msg.emailContactUsTo=Message to the MetaboLights team
 msg.welcomeWithStudies=Thanks {0}! You''ve submitted {1} studies.
-msg.welcomeWithoutStudies=Hi {0}! You''ve no studies yet.
+msg.welcomeWithoutStudies=Hi {0}! You''ve not submitted any studies yet.
 msg.submitted=You've submitted
 msg.studies=studies
-
-
 
 # For form field verification email 
 NotEmpty.emailAddress.emailAddress=Email address must not be empty.
